##Text encoding: utf-8

2016-02-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add a new direct OpenGL rendering option.
	* libs/gcr/application.cc: ditto.
	* libs/gcr/application.h: ditto.
	* libs/gcr/window.cc: ditto.
	* libs/gcugtk/Makefile.am: ditto.
	* libs/gcugtk/chem3dapplication.cc: ditto.
	* libs/gcugtk/chem3dapplication.h: ditto.
	* libs/gcugtk/chem3dwindow.cc: ditto.
	* libs/gcugtk/glapplication.cc: ditto.
	* libs/gcugtk/glapplication.h: ditto.
	* libs/gcugtk/glview.cc: ditto.
	* libs/gcugtk/glview.h: ditto.
	* plugins/loaders/cdx/cdx.cc: attached imported strings to the reaction
	arrow.
	* programs/paint/gchempaint.desktop.in.in: add keywords.
	* schemas/org.gnome.gchemutils.gschema.xml.in.in: add a new direct OpenGL
	rendering option.

2016-02-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/text.cc: ensure font family is correctly exported.
	* plugins/loaders/cdx/cdx.cc: save theme and fix various text export issues.

2016-02-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/document.cc: fix build with gcc-6 (and potential crasher).
	[Redhat bug #1307546]
	* plugins/loaders/cdx/cdx.cc: fix exported text position.

2016-02-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: fixd crasher.
	* libs/gcp/text.cc: add GetProperty() to allow for text export.
	* libs/gcp/text.h: ditto.
	* plugins/loaders/cdx/cdx.cc: partial implementation of text export.
	* plugins/loaders/cml/cml.cc: typo.

2016-02-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/table/gchemtable-app.cc: fixed typos. [#47081]
	* programs/table/gchemtable-curve.cc: ditto.
	* programs/table/gchemtable-data.cc: ditto.

2016-02-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: fixed text vertical position.

2016-02-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reactant.cc: fix reaction import from cdx format.
	* libs/gcp/reactant.h: ditto.
	* libs/gcp/text.cc: ditto.