@@ -11,6 +11,8 @@ Version 0.14.11:
 		[Redhat bug #1302135]
 	GCrystal:
 		* Fix build with gcc-6. [Redhat bug #1307546]
+	GCrystal and GChem3D:
+		* Don't crash when rendering to memory (images and print). [#47169]
 	Other:
 		* Updated appdata files.
 
